workloads-file/nginx.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nginx
  name: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  strategy: {}
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: quay.io/redhattraining/nginx:autoindex
        ports:
        - containerPort: 8080
        resources: {}
        volumeMounts:
        - name: persistent-storage
          mountPath: /opt/app-root/src/www
      volumes:
      - name: persistent-storage
        persistentVolumeClaim:
          claimName: image-tool
      securityContext: {}
      serviceAccount: image-tool
      serviceAccountName: image-tool
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nginx
  name: nginx
spec:
  ports:
  - name: nginx
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: nginx
  type: LoadBalancer
status:
  loadBalancer: {}
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: nginx
  name: nginx
spec:
  tls:
    termination: edge
  to:
    kind: Service
    name: nginx
    weight: null
